--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
         <javax.el.version>2.2</javax.el.version>
         <liquibase.core.version>3.8.9</liquibase.core.version>
         <postgresql.version>42.1.4</postgresql.version>
+        <lombok.version>1.18.10</lombok.version>
     </properties>
 
     <dependencyManagement>
@@ -108,6 +109,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
             <scope>provided</scope>
         </dependency>
 
