--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,12 @@
                 <artifactId>magic-model</artifactId>
                 <version>${project.version}</version>
             </dependency>
+
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>magic-service</artifactId>
+                <version>${project.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
