--- a/magic-application/src/main/resources/application.properties
+++ b/magic-application/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.username=zup_magic_manager
 spring.datasource.password=zup_magic_manager
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
 spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.default_schema=zup_magic
