--- a/magic-service/pom.xml
+++ b/magic-service/pom.xml
@@ -19,6 +19,11 @@
             <groupId>${project.groupId}</groupId>
             <artifactId>magic-repository</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
