--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,13 @@
             <version>${spring.boot.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+            <version>${spring.boot.version}</version>
+        </dependency>
+
+        
     </dependencies>
 
     <build>
