--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
         <liquibase.core.version>3.8.9</liquibase.core.version>
         <postgresql.version>42.1.4</postgresql.version>
         <lombok.version>1.18.10</lombok.version>
+        <spring.security.messaging>4.0.1.RELEASE</spring.security.messaging>
     </properties>
 
     <dependencyManagement>
@@ -131,6 +132,11 @@
             <version>${spring.boot.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-messaging</artifactId>
+            <version>${spring.security.messaging}</version>
+        </dependency>
         
     </dependencies>
 
