--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
         <postgresql.version>42.1.4</postgresql.version>
         <lombok.version>1.18.10</lombok.version>
         <spring.security.messaging>4.0.1.RELEASE</spring.security.messaging>
+        <mockk.version>1.9.3</mockk.version>
     </properties>
 
     <dependencyManagement>
@@ -66,6 +67,13 @@
     </dependencyManagement>
 
     <dependencies>
+        <dependency>
+            <groupId>io.mockk</groupId>
+            <artifactId>mockk</artifactId>
+            <version>${mockk.version}</version>
+            <scope>test</scope>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
